--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,13 @@ jdcal==1.4.1
 openpyxl==3.0.5
 phonenumbers==8.12.11
 Pillow==8.0.0
+psycopg2==2.9.1
 PyJWT==1.7.1
 pytz==2020.1
 qrcode==6.1
 requests==2.24.0
 six==1.15.0
 sqlparse==0.4.1
+twilio==6.63.2
 urllib3==1.25.10
 whitenoise==5.2.0
